test/conformance/chainsaw/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/namespaceConstraint.yaml
apiVersion: rules.example.com/v1
kind: NamespaceConstraint
metadata:
  name: "namespace-constraint-test.example.com"
name: "production-ns-01"
