test/conformance/chainsaw/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/ns-fail.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing-ns-01
