test/conformance/chainsaw/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/ns-pass.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-ns-01
