test/conformance/chainsaw/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-namespace-name-01
spec:
  background: false
  rules:
    - name: namespace-name-01
      match:
        any:
        - resources:
            kinds:
              - Namespace
            operations:
              - CREATE
              - UPDATE
      validate:
        failureAction: Enforce
        cel:
          paramKind: 
            apiVersion: rules.example.com/v1
            kind: NamespaceConstraint
          paramRef:
            name: "namespace-constraint-test.example.com"
            parameterNotFoundAction: "Deny"
          expressions:
            - expression: "object.metadata.name == params.name"
              messageExpression:  "'Namespace name must be ' + params.name"
