test/conformance/chainsaw/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/02-namespaceConstraint.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: namespaceConstraint
spec:
  timeouts: {}
  try:
  - apply:
      file: namespaceConstraint.yaml
  - assert:
      file: namespaceConstraint.yaml
