test/conformance/chainsaw/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/04-ns.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: ns
spec:
  timeouts: {}
  try:
  - apply:
      file: ns-pass.yaml
  - apply:
      check:
        (error != null): true
      file: ns-fail.yaml
