test/conformance/chainsaw/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: clusterscoped
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-assert.yaml
    - apply:
        file: permissions.yaml
  - name: step-02
    try:
    - apply:
        file: namespaceConstraint.yaml
    - assert:
        file: namespaceConstraint.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-namespace-name-01
  - name: step-04
    try:
    - apply:
        file: ns-pass.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ns-fail.yaml
